src/styles/portfolio.css
.portfolio-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 8px;
}

.portfolio-item {
  border: 1px solid;
  padding: 16px;
  margin: 8px;
  border-radius: 4px;
}

.portfolio-item:hover {
  box-shadow: var(--hover-shadow);
}

.portfolio-title {
  font-size: 1.5rem;
  font-weight: bold;
  margin-bottom: 8px;
}

.portfolio-link {
  text-decoration: none;
  color: var(--text-color);
  display: flex;
  flex-direction: column;
  align-items: center;
}

.portfolio-image {
  width: 100%;
  height: auto;
  border-radius: 4px;
  margin-top: 8px;
  margin-bottom: 8px;
  border-color: var(--button-background-color);
  border-width: 1px;
  border-style: solid;
}

.portfolio-description {
  margin-top: 8px;
  font-size: 1rem;
  text-align: center;
  width: 300px;
}

.portfolio-back-button {
  border-radius: 4px;
  background-color: var(--button-background-color);
  color: var(--button-text-color);
  left: 36px;
  position: fixed;
}

.portfolio-back-button:hover {
  box-shadow: var(--hover-shadow);
}

@media screen and (max-width: 768px) {
  .portfolio-back-button {
    left: 16px;
  }
}

.portfolio-detail-title {
  width: 50%;
  margin-right: auto;
  margin-left: auto;
}

.portfolio-details-categories-list {
  display: flex;
  justify-content: center;
  gap: 8px;
  flex-direction: row;
  align-items: center;
  flex-wrap: nowrap;
}

.portfolio-detail-category {
  background-color: var(--button-background-color);
  color: var(--button-text-color);
  padding: 4px 8px;
  border-radius: 4px;
}

